--- a/index.html
+++ b/index.html
@@ -4,40 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./src/output.css" rel="stylesheet" />
-    <title>weather dashboard</title>
+    <title>Weather Dashboard</title>
   </head>
-  <body class="bg-blue-950">
+  <body class="bg-black text-white">
+    <div class="stars-background">
+      <div id="stars-container"></div>
+    </div>
+
     <div id="app" class="grid grid-rows-[auto_1fr] h-screen gap-4">
+      <!-- Header Section -->
       <header
-        class="h-[150px] row-start-1 row-end-2 flex flex-row justify-between items-end px-24"
+        class="h-[100px] md:h-[150px] row-start-1 row-end-2 flex flex-row justify-between items-end px-4 sm:px-12 md:px-24"
       >
+        <!-- Left Side -->
         <div
           id="leftSide"
           class="h-14 flex flex-row gap-2 items-end justify-evenly"
         >
           <div class="max-w-4">
-            <img src="./assets/icons/logo.png" alt="logo" />
+            <img
+              src="./assets/icons/logo.png"
+              alt="logo"
+              class="w-full h-auto"
+            />
           </div>
-          <span
-            class="font-mediumQuicksand text-blue-300 pb-[3px]"
-            style="font-size: 13px; line-height: 12px"
-          >
+          <span class="font-mediumQuicksand text-blue-300 pb-[3px] text-xs">
             The<br />
             Weather<br />
             Dashboard
           </span>
         </div>
+        <!-- Right Side -->
         <div
           id="rightSide"
-          class="h-14 flex flex-row gap-10 justify-between items-end"
+          class="h-14 flex flex-row gap-4 sm:gap-10 justify-between items-end"
         >
           <div
-            class="w-24 h-[18px] outline outline-2 outline-offset-3 rounded outline-blue-300 text-center"
+            class="w-20 sm:w-24 h-[18px] outline outline-2 outline-offset-3 rounded outline-blue-300 text-center"
           >
             <a href="#" class="h-[100%] w-[100%] block">
-              <span
-                class="block font-regularQuicksand text-blue-300"
-                style="font-size: 13px; line-height: 20px"
+              <span class="block font-regularQuicksand text-blue-300 text-xs"
                 >Change Settings</span
               >
             </a>
@@ -47,49 +53,56 @@
             class="h-[18px] outline outline-2 outline-offset-3 rounded outline-blue-300"
           >
             <div class="w-5 p-1">
-              <img src="./assets/icons/art_refresh.png" alt="refresh" />
+              <img
+                src="./assets/icons/art_refresh.png"
+                alt="refresh"
+                class="w-full h-auto"
+              />
             </div>
           </a>
         </div>
       </header>
+
+      <!-- Main Section -->
       <main
-        class="row-start-2 row-end-3 flex justify-center items-center gap-24 w-full h-full"
+        class="row-start-2 row-end-3 flex flex-col md:flex-row justify-center items-center gap-4 md:gap-6 w-full h-full px-4 sm:px-12 md:px-24"
       >
+        <!-- Left Card -->
         <div
           id="big-parent-left"
-          class="flex justify-end items-center h-full w-full"
+          class="flex justify-center md:justify-end items-center h-full w-full md:w-auto"
         >
           <div
             id="left-card"
-            class="flex flex-col justify-evenly items-center w-[260px] h-[360px] outline outline-4 outline-blue-300 rounded-[7%]"
+            class="flex flex-col justify-evenly items-center w-[200px] sm:w-[260px] h-[350px] sm:h-[360px] outline outline-4 outline-blue-300 rounded-[7%] p-4"
           >
             <h1
-              class="text-blue-300 font-semiBoldQuicksand"
-              style="font-size: 20px; line-height: 30px"
+              class="text-blue-300 font-semiBoldQuicksand text-lg sm:text-xl md:text-2xl"
             >
               Feels Like
             </h1>
             <span
-              class="text-blue-300 font-semiBoldQuicksand"
-              style="font-size: 100px; line-height: 70px"
+              class="text-blue-300 font-semiBoldQuicksand text-6xl sm:text-7xl md:text-8xl"
               >15°</span
             >
-            <div id="left-card-bottom" class="flex gap-3 items-center">
-              <div class="w-14">
-                <img src="./assets/icons/art_clear.png" alt="clear" />
+            <div id="left-card-bottom" class="flex gap-2 sm:gap-3 items-center">
+              <div class="w-10 sm:w-14">
+                <img
+                  src="./assets/icons/art_clear.png"
+                  alt="clear"
+                  class="w-full h-auto"
+                />
               </div>
               <div id="l-card-b_right" class="flex flex-col gap-1">
                 <div id="l-card-b_right-top">
                   <span
-                    class="text-blue-300 font-regularQuicksand"
-                    style="font-size: 25px; line-height: 23px"
+                    class="text-blue-300 font-regularQuicksand text-lg sm:text-xl md:text-2xl"
                     >17°/13°</span
                   >
                 </div>
-                <div id="l-card-b_right-bottom" class="w-24">
+                <div id="l-card-b_right-bottom" class="w-20 sm:w-24">
                   <span
-                    class="text-blue-300 font-regularQuicksand h-[100%]"
-                    style="font-size: 10px; line-height: 10px"
+                    class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
                   >
                     Precipitation: 100%<br />
                     Humidity: 67%<br />
@@ -100,163 +113,222 @@
             </div>
           </div>
         </div>
+
+        <!-- Right Cards -->
         <div
           id="big-parent-right"
-          class="flex flex-col items-center justify-center w-full h-full"
+          class="flex flex-col items-start justify-center w-full h-full gap-4"
         >
+          <!-- Top Cards (Days Weather) -->
           <div
             id="right-cards_top"
-            class="flex items-center justify-start w-full h-full"
+            class="flex items-center justify-center md:items-end md:justify-start w-full h-full"
           >
             <ul
               id="daysWeather"
-              class="flex justify-center items-center gap-5 w-[80%] h-[170px]"
+              class="flex flex-wrap sm:flex-nowrap justify-center items-center gap-2 sm:gap-5 w-[80%] h-auto sm:h-[185px]"
             >
               <li
-                class="flex flex-col outline outline-2 outline-blue-300 rounded-xl items-center justify-evenly h-full w-[100%]"
+                class="flex flex-col outline outline-2 outline-blue-300 rounded-xl items-center justify-evenly h-[120px] sm:h-full w-[45%] sm:w-[100%] p-2"
               >
                 <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
                   >Wednesday</span
                 >
-                <div class="w-14">
-                  <img src="./assets/icons/art_clouds.png" alt="clouds" />
+                <div class="w-8 sm:w-14">
+                  <img
+                    src="./assets/icons/art_clouds.png"
+                    alt="clouds"
+                    class="w-full h-auto"
+                  />
                 </div>
                 <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
                   >17°/13°</span
                 >
-                <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                <span class="text-blue-300 font-regularQuicksand text-xs"
                   >Precipitation: 0%</span
                 >
               </li>
-
               <li
-                class="flex flex-col outline outline-2 outline-blue-300 rounded-xl items-center justify-evenly h-full w-[100%]"
+                class="flex flex-col outline outline-2 outline-blue-300 rounded-xl items-center justify-evenly h-[120px] sm:h-full w-[45%] sm:w-[100%] p-2"
               >
                 <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
                   >Thursday</span
                 >
-                <div class="w-14">
-                  <img src="./assets/icons/art_clouds.png" alt="clouds" />
+                <div class="w-8 sm:w-14">
+                  <img
+                    src="./assets/icons/art_clouds.png"
+                    alt="clouds"
+                    class="w-full h-auto"
+                  />
                 </div>
                 <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
                   >16°/11°</span
                 >
-                <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                <span class="text-blue-300 font-regularQuicksand text-xs"
                   >Precipitation: 0%</span
                 >
               </li>
-
               <li
-                class="flex flex-col outline outline-2 outline-blue-300 rounded-xl items-center justify-evenly h-full w-[100%]"
+                class="flex flex-col outline outline-2 outline-blue-300 rounded-xl items-center justify-evenly h-[120px] sm:h-full w-[45%] sm:w-[100%] p-2"
               >
                 <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
                   >Friday</span
                 >
-                <div class="w-14">
-                  <img src="./assets/icons/art_clouds.png" alt="clouds" />
+                <div class="w-8 sm:w-14">
+                  <img
+                    src="./assets/icons/art_clouds.png"
+                    alt="clouds"
+                    class="w-full h-auto"
+                  />
                 </div>
                 <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
                   >14°/10°</span
                 >
-                <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                <span class="text-blue-300 font-regularQuicksand text-xs"
                   >Precipitation: 0%</span
                 >
               </li>
-
               <li
-                class="flex flex-col outline outline-2 outline-blue-300 rounded-xl items-center justify-evenly h-full w-[100%]"
+                class="flex flex-col outline outline-2 outline-blue-300 rounded-xl items-center justify-evenly h-[120px] sm:h-full w-[45%] sm:w-[100%] p-2"
               >
                 <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
                   >Saturday</span
                 >
-                <div class="w-14">
-                  <img src="./assets/icons/art_rain.png" alt="clouds" />
+                <div class="w-8 sm:w-14">
+                  <img
+                    src="./assets/icons/art_rain.png"
+                    alt="clouds"
+                    class="w-full h-auto"
+                  />
                 </div>
                 <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
                   >11°/9°</span
                 >
-                <span
-                  class="text-blue-300 font-regularQuicksand"
-                  style="font-size: 12px; line-height: 12px"
+                <span class="text-blue-300 font-regularQuicksand text-xs"
                   >Precipitation: 0%</span
                 >
               </li>
             </ul>
           </div>
 
+          <!-- Bottom Card (Today Weather) -->
           <div
             id="right-card_bottom"
-            class="flex items-start justify-start w-full h-full"
+            class="flex items-center justify-center md:items-start md:justify-start w-full h-full"
           >
             <ul
               id="todayWeather"
-              class="flex flex-row justify-between text-center w-[60%] h-[170px] py-1 items-start outline outline-2 outline-blue-300 rounded-xl"
+              class="flex flex-nowrap justify-between text-center w-[70%] h-auto sm:h-[170px] py-1 outline outline-2 outline-blue-300 rounded-xl p-2"
             >
-              <li class="flex flex-col items-center justify-between w-[100%] h-full">
-                <span class="text-blue-300 font-regularQuicksand">03:00</span>
-                <div class="w-14">
-                  <img src="./assets/icons/art_clouds.png" alt="clouds" />
+              <li
+                class="flex flex-col items-center justify-between w-[40%] sm:w-[100%] h-[100px] sm:h-full p-1"
+              >
+                <span
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
+                  >03:00</span
+                >
+                <div class="w-8 sm:w-14">
+                  <img
+                    src="./assets/icons/art_clouds.png"
+                    alt="clouds"
+                    class="w-full h-auto"
+                  />
                 </div>
-                <span class="text-blue-300 font-regularQuicksand">13°</span>
+                <span
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
+                  >13°</span
+                >
               </li>
-
-              <li class="flex flex-col items-center justify-between w-[100%] h-full">
-                <span class="text-blue-300 font-regularQuicksand">06:00</span>
-                <div class="w-14">
-                  <img src="./assets/icons/art_clouds.png" alt="clouds" />
+              <li
+                class="flex flex-col items-center justify-between w-[40%] sm:w-[100%] h-[100px] sm:h-full p-1"
+              >
+                <span
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
+                  >06:00</span
+                >
+                <div class="w-8 sm:w-14">
+                  <img
+                    src="./assets/icons/art_clouds.png"
+                    alt="clouds"
+                    class="w-full h-auto"
+                  />
                 </div>
-                <span class="text-blue-300 font-regularQuicksand">15°</span>
+                <span
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
+                  >15°</span
+                >
               </li>
-
-              <li class="flex flex-col items-center justify-between w-[100%] h-full">
-                <span class="text-blue-300 font-regularQuicksand">09:00</span>
-                <div class="w-14">
-                  <img src="./assets/icons/art_clouds.png" alt="clouds" />
+              <li
+                class="flex flex-col items-center justify-between w-[40%] sm:w-[100%] h-[100px] sm:h-full p-1"
+              >
+                <span
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
+                  >09:00</span
+                >
+                <div class="w-8 sm:w-14">
+                  <img
+                    src="./assets/icons/art_clouds.png"
+                    alt="clouds"
+                    class="w-full h-auto"
+                  />
                 </div>
-                <span class="text-blue-300 font-regularQuicksand">17°</span>
+                <span
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
+                  >17°</span
+                >
               </li>
-
-              <li class="flex flex-col items-center justify-between w-[100%] h-full">
-                <span class="text-blue-300 font-regularQuicksand">12:00</span>
-                <div class="w-14">
-                  <img src="./assets/icons/art_rain.png" alt="rain" />
+              <li
+                class="flex flex-col items-center justify-between w-[40%] sm:w-[100%] h-[100px] sm:h-full p-1"
+              >
+                <span
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
+                  >12:00</span
+                >
+                <div class="w-8 sm:w-14">
+                  <img
+                    src="./assets/icons/art_rain.png"
+                    alt="clouds"
+                    class="w-full h-auto"
+                  />
                 </div>
-                <span class="text-blue-300 font-regularQuicksand">14°</span>
+                <span
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
+                  >14°</span
+                >
               </li>
-
-              <li class="flex flex-col items-center justify-between w-[100%] h-full">
-                <span class="text-blue-300 font-regularQuicksand">15:00</span>
-                <div class="w-14">
-                  <img src="./assets/icons/art_rain.png" alt="rain" />
+              <li
+                class="flex flex-col items-center justify-between w-[40%] sm:w-[100%] h-[100px] sm:h-full p-1"
+              >
+                <span
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
+                  >15:00</span
+                >
+                <div class="w-8 sm:w-14">
+                  <img
+                    src="./assets/icons/art_rain.png"
+                    alt="clouds"
+                    class="w-full h-auto"
+                  />
                 </div>
-                <span class="text-blue-300 font-regularQuicksand">14°</span>
+                <span
+                  class="text-blue-300 font-regularQuicksand text-xs sm:text-sm"
+                  >14°</span
+                >
               </li>
             </ul>
           </div>
         </div>
       </main>
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
