Updating the structure of directory

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./src/output.css" rel="stylesheet" />
+    <link href="/src/styles/output.css" rel="stylesheet" />
     <title>Weather Dashboard</title>
   </head>
   <body class="bg-black text-white">
@@ -23,7 +23,7 @@
         >
           <div class="max-w-4">
             <img
-              src="./assets/icons/logo.png"
+              src="/src/images/icons/logo.png"
               alt="logo"
               class="w-full h-auto"
             />
@@ -54,7 +54,7 @@
           >
             <div class="w-5 p-1">
               <img
-                src="./assets/icons/art_refresh.png"
+                src="/src/images/icons/art_refresh.png"
                 alt="refresh"
                 class="w-full h-auto"
               />
@@ -88,7 +88,7 @@
             <div id="left-card-bottom" class="flex gap-2 sm:gap-3 items-center">
               <div class="w-10 sm:w-14">
                 <img
-                  src="./assets/icons/art_clear.png"
+                  src="/src/images/icons/art_clear.png"
                   alt="clear"
                   class="w-full h-auto"
                 />
@@ -137,7 +137,7 @@
                 >
                 <div class="w-8 sm:w-14">
                   <img
-                    src="./assets/icons/art_clouds.png"
+                    src="/src/images/icons/art_clouds.png"
                     alt="clouds"
                     class="w-full h-auto"
                   />
@@ -159,7 +159,7 @@
                 >
                 <div class="w-8 sm:w-14">
                   <img
-                    src="./assets/icons/art_clouds.png"
+                    src="/src/images/icons/art_clouds.png"
                     alt="clouds"
                     class="w-full h-auto"
                   />
@@ -181,7 +181,7 @@
                 >
                 <div class="w-8 sm:w-14">
                   <img
-                    src="./assets/icons/art_clouds.png"
+                    src="/src/images/icons/art_clouds.png"
                     alt="clouds"
                     class="w-full h-auto"
                   />
@@ -203,7 +203,7 @@
                 >
                 <div class="w-8 sm:w-14">
                   <img
-                    src="./assets/icons/art_rain.png"
+                    src="/src/images/icons/art_rain.png"
                     alt="clouds"
                     class="w-full h-auto"
                   />
@@ -237,7 +237,7 @@
                 >
                 <div class="w-8 sm:w-14">
                   <img
-                    src="./assets/icons/art_clouds.png"
+                    src="/src/images/icons/art_clouds.png"
                     alt="clouds"
                     class="w-full h-auto"
                   />
@@ -256,7 +256,7 @@
                 >
                 <div class="w-8 sm:w-14">
                   <img
-                    src="./assets/icons/art_clouds.png"
+                    src="/src/images/icons/art_clouds.png"
                     alt="clouds"
                     class="w-full h-auto"
                   />
@@ -275,7 +275,7 @@
                 >
                 <div class="w-8 sm:w-14">
                   <img
-                    src="./assets/icons/art_clouds.png"
+                    src="/src/images/icons/art_clouds.png"
                     alt="clouds"
                     class="w-full h-auto"
                   />
@@ -294,7 +294,7 @@
                 >
                 <div class="w-8 sm:w-14">
                   <img
-                    src="./assets/icons/art_rain.png"
+                    src="/src/images/icons/art_rain.png"
                     alt="clouds"
                     class="w-full h-auto"
                   />
@@ -313,7 +313,7 @@
                 >
                 <div class="w-8 sm:w-14">
                   <img
-                    src="./assets/icons/art_rain.png"
+                    src="/src/images/icons/art_rain.png"
                     alt="clouds"
                     class="w-full h-auto"
                   />
@@ -329,6 +329,6 @@
       </main>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="/src/scripts/main.js"></script>
   </body>
 </html>
